--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="title_activity_menu">Menu</string>
 
     <string name="title_activity_game">Game</string>
+
+    <string name="title_activity_load_status">LoadStatus</string>
 </resources>
